@@ -1,0 +1,5 @@
+docdir = $(datadir)/doc/@PACKAGE@/contrib
+doc_DATA = ifstatus \
+	README
+
+EXTRA_DIST = $(doc_DATA)
