@@ -1,0 +1,7 @@
+docdir = $(datadir)/doc/@PACKAGE@/
+doc_DATA = PITCHME.md \
+	PITCHME.yaml 
+
+SUBDIRS = assets
+
+EXTRA_DIST = $(doc_DATA)
