@@ -1,0 +1,7 @@
+docdir = $(datadir)/doc/@PACKAGE@/assets/
+doc_DATA = badge.svg  \
+	rmsgw_pitch.dia \
+	rmsgw_pitch.png \
+	weblogoblk.png
+
+EXTRA_DIST = $(doc_DATA)
